# ceilingfan_new

./: Makefile  RELEASE_NOTES_PHA.txt
arch/esp32/apps/Ceiling-fan/: CMakeLists.txt  pkg.mk  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old
arch/esp32/apps/Ceiling-fan/conf/: hm-defender.txt
arch/esp32/apps/Ceiling-fan/main/: CMakeLists.txt  app_debug.c  app_debug.h  app_int.h  app_logic.c  app_logic.h  app_main.c  declarations.h  tcp_client.c  tcp_server.c
arch/esp32/boot/pha/: CMakeLists.txt  Makefile  boot_sec_patch.txt  sdkconfig-nosec-4M
arch/esp32/boot/pha/conf/: CDA01.mk  esp_mini_1.mk  esp_wroom_32e.mk  leedarson_6870x.mk  sdkconfig-esp32-c3-4M  sdkconfig-esp_mini_1-4M  sdkconfig-leedarson_6870x-4M  sdkconfig-leedarson_6870x-8M
arch/esp32/components/libapp/: CMakeLists.txt  libapp_bt.c  libapp_cli.c  libapp_command_table.h  libapp_conf.c  libapp_conf_int.h  libapp_conf_load.c  libapp_conf_wifi.h  libapp_debounce.c  libapp_diag.c  libapp_net_event.c  libapp_nvs.c  libapp_nvs_int.h  libapp_ota.c  libapp_sched.c  libapp_sched.h  libapp_start.c  libapp_wifi.c  power_mgmt.c
arch/esp32/components/libapp/include/libapp/: debounce.h  libapp.h  libapp_ota.h  net_event.h  power_mgmt.h
arch/esp32/components/libpha/: CMakeLists.txt  ftm.c  ftm_int.h  ftm_wifi.c  secure.c  secure_cli.c  secure_int.h
arch/esp32/components/libpha/include/libpha/: ftm.h  secure.h
arch/esp32/conf/: eng_key.cer  eng_key.pem  eng_key_c3.pem  flash_partitions_4M.csv  flash_partitions_8M.csv  flash_partitions_v2_4M.csv  sdkconfig-4M-dev  sdkconfig-pha-up.defaults.esp32  sdkconfig-pha-up.defaults.esp32c3  sdkconfig-pha.defaults.esp32
arch/esp32/make/: ada_check.mk  ada_required.mk  app.mk  app_pkg.mk  cstyle.mk  pha.mk  pha_release.mk  pha_release_v2.1.mk  pha_release_v2.mk  sdk.mk  source.mk  version.mk
arch/esp32/prod/: Makefile  README.txt  app_pkg.mk  prod_gen.py  prod_run.py  prod_tool.py
arch/esp32/prod/pyayla/: ayla_conf_tokens.py  prod_batch.py  prod_csv.py  prod_expect.py  prod_install.py
arch/esp32/tools/: addr.sh
cmake/: ada_check.cmake  ada_required.cmake  build.h.in  cstyle.cmake  patches.cmake  pha.cmake  pha_project.cmake  pha_src.cmake  version.cmake
components/host_proto/: CMakeLists.txt  conf_tlv.c  conf_tlv.h  data_tlv.c  data_tlv.h  data_tlv_wifi.c  host_decode.c  host_decode.h  host_prop.c  host_prop.h  host_proto.c  host_proto_int.h  host_proto_ota.c  host_proto_ota.h  hp_buf.c  hp_buf.h  hp_buf_cb.c  hp_buf_cb.h  hp_buf_tlv.c  hp_buf_tlv.h  mcu_uart.c  mcu_uart_int.h  prop_req.c  prop_req.h
components/host_proto/include/host_proto/: host_proto.h  mcu_dev.h
ext/: .style_ok
ext/schneider/tools/se_esp32_secure_toolkit/: se_esp32_sbv2.py  se_esp32_secure_sim.py  se_esp32_su.py
ext/schneider/tools/se_esp32_secure_toolkit/PKI_secrets/: ESP32OTASig.cer  ESP32OTASig.cer.pem  ESP32Sig.cer  sbv2_signing_key.pem  su_signing_key.pem
ext/touchpad/: touchpad.c
ext/touchpad/include/: iot_touchpad.h
oem/: oem_config.py
oem/config/: example.txt  starter_app.txt
util/: checkpatch_ayla  cstyle.py  cstyle_ayla
util/hooks/: pre-commit
